# dash_on_flask

./: .envrc  .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.json  config.py  dash_on_flask.py  dashapp.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: __init__.py  dashapp.py  extensions.py  forms.py  models.py  webapp.py
app/dashapp1/: callbacks.py  get_data.py  layout.py
app/dashapp2/: callbacks.py  layout.py
app/templates/: base.html  index.html  login.html  register.html
migrations/versions/: 8e9c46887a13_init.py  d069b7ae4ee4_init.py
